<resources>
    <string name="app_name">algoengine</string>
    <string name="device_feature_configuration_file_name">default</string>
    <string name="camera_setting">Camera</string>
    <string name="path_settings">System apps/Camera/Settings</string>
    <string name="search_settings">Camera settings;Quality;Image quality;Image location;Picture location;Face detection;Camera sound</string>
    <string name="hibernate_hint">Tap the screen to wake Camera</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera_once">"Can't connect to camera"</string>
    <string name="cannot_connect_camera_twice">"Still can't connect to camera. Try restarting your device."</string>
    <string name="camera_disabled">Camera has been disabled</string>
    <string name="camera_label">ANXCamera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="no_storage">Insert SD card before using camera</string>
    <string name="not_enough_space">SD card is full</string>
    <string name="preparing_sd">Checking SD card…</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="confirm_restore_title">Restore default settings</string>
    <string name="confirm_restore_message">"Restore Camera's default settings?"</string>
    <string name="confirm_location_title">Remember photo locations?</string>
    <string name="confirm_location_message">Tag your photos and videos with the locations where they are taken. Other apps can access this information along with your saved images.</string>
    <string name="confirm_location_alert">Remember photo locations</string>
    <string name="start_capture">OK</string>
    <string name="pref_camera_recordlocation_title">Save location info</string>
    <string name="pref_camera_recordlocation_default">false</string>
    <string name="pref_camera_sound_title">Camera sounds</string>
    <string name="pref_camera_proximity_lock_title">Pocket mode</string>
    <string name="pref_camera_proximity_lock_summary">Lock touch gestures when placed in a pocket</string>
    <string name="screen_on_proximity_sensor_summary">"Don't cover the earphone area"</string>
    <string name="screen_on_proximity_sensor_hint">To turn this feature off, press the Volume up and Back buttons simultaneously.</string>
    <string name="pref_front_mirror_title">Mirror front camera</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_hfr_title">Video HFR</string>
    <string name="pref_video_quality_default">8</string>
    <string name="pref_mi_front_video_quality_default">6</string>
    <string name="pref_mtk_video_quality_default">10</string>
    <string name="pref_video_quality_entry_value_4kuhd">8</string>
    <string name="pref_video_quality_entry_value_4kuhd_60fps">8,60</string>
    <string name="pref_video_quality_entry_value_1080p_60fps">6,60</string>
    <string name="pref_video_quality_entry_value_720p_60fps">5,60</string>
    <string name="pref_video_quality_value_autozoom">6</string>
    <string name="pref_video_quality_entry_4kuhd">UHD 4K, 30fps</string>
    <string name="pref_video_quality_entry_4kuhd_60fps">UHD 4K, 60fps</string>
    <string name="pref_video_quality_entry_1080p">FHD 1080p, 30fps</string>
    <string name="pref_video_quality_entry_1080p_60fps">FHD 1080p, 60fps</string>
    <string name="pref_video_quality_entry_720p">HD 720p, 30fps</string>
    <string name="pref_video_quality_entry_720p_60fps">HD 720p, 60fps</string>
    <string name="pref_video_quality_entry_480p">SD 480p, 30fps</string>
    <string name="pref_new_slow_motion_video_quality_entry_1080p">FHD 1080p</string>
    <string name="pref_new_slow_motion_video_quality_entry_720p">HD 720p</string>
    <string name="pref_new_slow_motion_video_quality_240_720only">You can only record 720p videos with 240fps</string>
    <string name="pref_new_slow_motion_video_quality_960_720only">You can only record 720p videos with 960fps</string>
    <string name="pref_video_encoder_title">Video encoder</string>
    <string name="pref_video_encoder_entry_h264">H.264 High compatibility</string>
    <string name="pref_video_encoder_entry_h265">H.265 High performance</string>
    <string name="pref_video_encoder_default">h264</string>
    <string name="pref_video_hfr_entryvalue_default">1920x1080:120</string>
    <string name="camera_new_slow_motion_quality_default">5</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
    <string name="pref_video_time_lapse_frame_interval_default">120</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2">2X (0.06-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_4">4X (0.12-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_10">10X (0.3-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_30">30X (1 second)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_60">60X (2-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_90">90X (3-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_120">120X (4-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_150">150X (5-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_240">240X (8-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_300">300X (10-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_450">450X (15-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_900">900X (30-second interval)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1800">1800X (60-second interval)</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title_simple_mode">Camera frame</string>
    <string name="pref_camera_jpegquality_value_high">high</string>
    <string name="pref_camera_jpegquality_value_normal">normal</string>
    <string name="pref_camera_jpegquality_value_low">low</string>
    <string name="pref_camera_jpegquality_default">@string/pref_camera_jpegquality_value_high</string>
    <string name="pref_camera_picture_format_entry_raw">Raw</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_jpegquality_entry_high">High</string>
    <string name="pref_camera_jpegquality_entry_normal">Standard</string>
    <string name="pref_camera_jpegquality_entry_low">Low</string>
    <string name="pref_camera_focusmode_entry_auto">AUTO</string>
    <string name="pref_camera_focusmode_entry_normal">Standard</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_video_focusmode_title">Focus mode</string>
    <string name="pref_video_focusmode_entry_continuous">CAF</string>
    <string name="pref_video_focusmode_entry_auto">Tap</string>
    <string name="pref_video_focusmode_entryvalue_continuous">continuous-video</string>
    <string name="pref_video_focusmode_entryvalue_auto">auto</string>
    <string name="pref_video_focusmode_entryvalue_default">@string/pref_video_focusmode_entryvalue_continuous</string>
    <string name="pref_camera_focusmode_value_default">continuous-picture</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_flashmode_entry_torch">Torch</string>
    <string name="pref_camera_front_bokeh_entry_on">On</string>
    <string name="pref_camera_front_bokeh_entry_off">Off</string>
    <string name="pref_camera_whitebalance_default">1</string>
    <string name="pref_camera_whitebalance_title">WB</string>
    <string name="pref_camera_whitebalance_entry_auto">AUTO</string>
    <string name="pref_camera_coloreffect_default">none</string>
    <string name="pref_camera_coloreffect_title">Filters</string>
    <string name="pref_camera_coloreffect_entry_none">Normal</string>
    <string name="color_effect_entry_vivid">Vivid</string>
    <string name="color_effect_entry_film">Film</string>
    <string name="color_effect_entry_koizora">Amour</string>
    <string name="color_effect_entry_latte">Latte</string>
    <string name="color_effect_entry_warm">Sun</string>
    <string name="color_effect_entry_cookie">Cookie</string>
    <string name="color_effect_entry_quiet">Calm</string>
    <string name="color_effect_entry_soda">Soda</string>
    <string name="color_effect_entry_delicacy">Gourmet</string>
    <string name="color_effect_entry_glimmer">Glow</string>
    <string name="color_effect_entry_berry">Berries</string>
    <string name="color_effect_entry_blackwhite">B&amp;W</string>
    <string name="color_effect_entry_fade">Fade</string>
    <string name="video_effect_entry_film">Film</string>
    <string name="video_effect_entry_holiday">Reflections</string>
    <string name="video_effect_entry_polaroid">Polaroid</string>
    <string name="video_effect_entry_forest">Grove</string>
    <string name="video_effect_entry_blackwhite">B&amp;W</string>
    <string name="video_effect_entry_bygone">Bygone</string>
    <string name="portait_effect_entry_nature">Nature</string>
    <string name="portait_effect_entry_fairytale">Childhood</string>
    <string name="portait_effect_entry_pink">Blush</string>
    <string name="portait_effect_entry_japanese">Sky blue</string>
    <string name="portait_effect_entry_mood">Emotions</string>
    <string name="portait_effect_entry_romance">Romantic</string>
    <string name="portait_effect_entry_maze">Maze</string>
    <string name="portait_effect_entry_cool">Mint</string>
    <string name="portait_effect_entry_blackwhite">B&amp;W</string>
    <string name="portait_effect_entry_story">Story</string>
    <string name="portait_effect_entry_riddle">Candy</string>
    <string name="portait_effect_entry_movie">Movie</string>
    <string name="portait_effect_entry_tea">Tea</string>
    <string name="portait_effect_entry_lilt">Lilt</string>
    <string name="portait_effect_entry_sepia">Sepia</string>
    <string name="portait_effect_entry_dusk">Dusk</string>
    <string name="pref_camera_touchafaec_default">touch-on</string>
    <string name="pref_camera_multilevel_entry_lowest">Lowest</string>
    <string name="pref_camera_multilevel_entry_lower">Lower</string>
    <string name="pref_camera_multilevel_entry_low">Low</string>
    <string name="pref_camera_multilevel_entry_normal">Normal</string>
    <string name="pref_camera_multilevel_entry_high">High</string>
    <string name="pref_camera_multilevel_entry_higher">Higher</string>
    <string name="pref_camera_multilevel_entry_highest">Highest</string>
    <string name="pref_camera_multilevel_entry_middle">Medium (default)</string>
    <string name="pref_camera_contrast_default">5</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_saturation_default">3</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_sharpness_default">1</string>
    <string name="pref_camera_sharpness_title">Sharpness</string>
    <string name="pref_camera_scenemode_title">Scene</string>
    <string name="mimoji_detect_tips">Keep your face inside the frame</string>
    <string name="mimoji_back">Back</string>
    <string name="mimoji_confirm">OK</string>
    <string name="mimoji_editor">Edit</string>
    <string name="mimoji_save">Save</string>
    <string name="mimoji_recapture">Start over</string>
</resources>